--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,12 @@ include_directories(src/include)
 include(cmake/btrblocks.cmake)
 include(cmake/croaring.cmake)
 
-set(EXTENSION_SOURCES src/quack_extension.cpp)
+set(EXTENSION_SOURCES
+        src/quack_extension.cpp
+        src/ColumnReadState.cpp
+        src/DirectoryReader.cpp
+        src/RecordBatchStreamReader.cpp
+)
 
 build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
 build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})
